--- a/css/variables.css
+++ b/css/variables.css
@@ -16,6 +16,6 @@
   --color-primary-dark: hsl(0, 0%, 60%);
   --color-primary-darker: hsl(0, 0%, 40%);
 
-  --color-window-scrollbar-thumb: rgb(250, 241, 228);
-  --color-window-scrollbar-track: rgb(103, 100, 94);
+  --color-window-scrollbar-thumb: rgba(250, 241, 228);
+  --color-window-scrollbar-track: rgba(103, 100, 94);
 }
